--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,6 +6,7 @@
 	<title>Profile</title>
 </head>
 <body>
+	<!-- <% if (locals.user){ %> -->
 	<div id='header'>
 		<img class="header item" id='logo' src='../images/matcha.png'>
 		<a href="logout">
@@ -15,5 +16,6 @@
 		<img class='roundbutton' src='../images/chat.svg' />
 		<img class='roundbutton' src='../images/notifications.svg' />
 	</div>
+	<!-- <% } %> -->
 </body>
 </html>
