--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -1,3 +1,14 @@
+button{
+	border: 0;
+	padding: 0;
+}
+
+main {
+	background-color: #fafafa;
+	margin: 0;
+	/*margin-top: 40px;*/
+}
+
 #header{
 	border-bottom: 1px solid rgba(0,0,0,.0975);
 	display: block;
@@ -6,14 +17,31 @@
 
 #logo{
 	margin-left: 3%;
-	width: 200px;
-	height: 93.45px;
+	width: auto;
+	height: 80px;
+	/*display: inline;*/
+	padding: .92857143em 1.14285714em;
 	/*vertical-align: middle;*/
 }
 
-.roundbutton{
-	height: 45px;
-	float: right;
-	vertical-align: middle;
+#top{
+	padding-top: 40px;
+}
 
+header button, header div{
+	display: flex;
+}
+
+header button{
+	margin-right: 50px;
+}
+
+.nav{
+	float: right;
+	margin-top: 30px;
+	margin-right: 20px;
+}
+
+.nav img{
+	height: 45px;
 }
