--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,7 +10,7 @@
 			<div class="content">
 				<div class='name'>
 		  			<p>
-						<h1> lvalenti </h1>
+						<h1><%= locals.user%></h1>
 						<h1>, 21</h1>
 						<h1> ♂</h1>
 					</p>
