--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel='stylesheet' href='./css/profile.css'>
+	<%- css -%>
 	<link rel='stylesheet' href='./css/semantic.min.css'>
 	<link rel='stylesheet' href='./css/main.css' />
 	<meta charset="utf-8" />
