--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,7 +11,9 @@
 </head>
 <body>
 	<header id="header">
-		<img class="header item" id='logo' src='./images/matcha.png'>
+		<a href='home' id='logo'>
+			<img class="header item" id='logo' src='./images/matcha.png'>
+		</a>
 		<nav class="links">
 			<ul>
 				<li><a href='profile'>Profile</a></li>
