--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -5,9 +5,11 @@
 /*}*/
 
 #logo{
+	margin-top: 3px;
 	margin-left: 3%;
 	width: auto;
 	height: 50px;
+	padding: 0;
 	/*display: inline;*/
 	/*padding: .92857143em 1.14285714em;*/
 	/*vertical-align: middle;*/
@@ -15,7 +17,7 @@
 
 #top{
 	padding-top: 40px;
-	max-width: 700px;
+	max-width: 750px;
 	margin-left: auto;
 	margin-right: auto;
 }
