--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,11 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
+	#logo{
+		margin-left: 3%;
+		width: auto;
+		height: 50px;
+	}
 
 /* Reset */
 
