--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -25,7 +25,7 @@
 					<h2>Interested in: <%= orientation%></h2>
 				</div>
 				<div class="score">
-					<h3>Score: 7.8</h3>
+					<h3>Score: <%= score %></h3>
 				</div>
 			</div>
 		</div>
